# freebsd-opengl

./: .gitignore  CMakeLists.txt  README.MD
lib/glad/include/glad/: glad.h
src/: Camera.h  glad.c  lamp.fs  lamp.vs  lighting.vs  main.cpp  shader.h
